infrastructure/controllers/bytestash/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bytestash
  labels:
    app.kubernetes.io/name: bytestash
    app.kubernetes.io/component: snippets
