infrastructure/controllers/bytestash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bytestash
  namespace: bytestash
  labels:
    app.kubernetes.io/name: bytestash
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bytestash
